--- a/src/app/Components/TrustDelfyle/TrustDelfyle.module.css
+++ b/src/app/Components/TrustDelfyle/TrustDelfyle.module.css
@@ -1,3 +1,10 @@
+.sectionWrapper {
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+  z-index: -1;
+}
+
 .mainContainer {
   display: flex;
   justify-content: space-between;
@@ -5,7 +12,7 @@
   width: 100vw;
   background-color: white;
   position: relative;
-  z-index: -1;
+  z-index: 1;
 }
 
 .leftColumn {
@@ -13,6 +20,7 @@
   background-color: #ffffff;
   padding: 0;
   margin-right: 0;
+  max-width: 50vw;
 }
 
 .innerContainerParent {
@@ -58,7 +66,7 @@
   align-items: center;
   justify-content: start;
   opacity: 0;
-  transition: opacity 0.6s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .imageContainer.visible {
@@ -70,7 +78,7 @@
   height: 50%;
   position: relative;
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
   margin-left: 4rem;
 }
 
@@ -90,6 +98,8 @@
   max-width: 600px;
   font-family: "Inter", sans-serif;
   align-items: start;
+  position: relative;
+  z-index: 2;
 }
 
 .headerSection {
@@ -156,7 +166,7 @@
   width: 120%;
   height: calc(100% + 40px);
   background: white;
-  transition: all 0.4s ease;
+  transition: all 0.3s ease;
   z-index: 1;
   transform: rotate(5deg);
   transform-origin: left center;
